--- a/jquery-matrix.html
+++ b/jquery-matrix.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="client/css/html-matrix.css">
+    <link rel="stylesheet" href="css/html-matrix.css">
     <script type="text/javascript">
     
         // http://stackoverflow.com/questions/11582512/how-to-get-url-parameters-with-javascript/11582513#11582513
