--- a/pixi-0101-blue.html
+++ b/pixi-0101-blue.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='//fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="client/css/pixi-0101.css">
+    <link rel="stylesheet" href="css/pixi-0101.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/pixi.js/3.0.6/pixi.min.js"></script>
 
 </head>
