--- a/p5-dot-matrix.html
+++ b/p5-dot-matrix.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/dot-matrix.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.sound.min.js"></script>
-    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.dom.min.js"></script>-->
     <script>
+        // http://stackoverflow.com/questions/11582512/how-to-get-url-parameters-with-javascript/11582513#11582513
+        function getURLParameter(name) {
+            return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [, ""])[1].replace(/\+/g, '%20')) || null
+        }
+        var maxChars = getURLParameter('maxchars');
+        if (!maxChars) maxChars = 30;
+        var maxShadowLength = getURLParameter('maxshadowlength');
+        if (!maxShadowLength) maxShadowLength = 16;
+        
         var points = [];
         var shadows = [];
 
@@ -58,7 +65,7 @@
         function setup() {
             createCanvas(displayWidth, displayHeight);
             background(0, 0, 0);
-            for (var i = 0; i < 30; i++) {
+            for (var i = 0; i < maxChars; i++) {
                 var p = new point_factory(displayWidth, displayHeight);
                 p.init();
                 points.push(p);
