--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -58,9 +58,9 @@
             c.position.y = 0;
             c.position.x = rand(0, view.size.width);
             // vary the size
-            var scale = 1 * Math.random();
+            //var scale = 1 * Math.random();
             if (scale > 0.25) {
-                c.scale(scale);
+                //c.scale(scale);
             }
             // hack, using word wrap for shadow length
             // c.wordWrapWidth = rand(maxShadowLength/3, maxShadowLength);
