--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -59,9 +59,9 @@
             c.position.x = rand(0, view.size.width);
             // vary the size
             //var scale = 1 * Math.random();
-            if (scale > 0.25) {
+            //if (scale > 0.25) {
                 //c.scale(scale);
-            }
+            //}
             // hack, using word wrap for shadow length
             // c.wordWrapWidth = rand(maxShadowLength/3, maxShadowLength);
             return;
