--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -50,6 +50,7 @@
         	c.fontFamily = 'matrix-code';
         	c.fontSize = '70px';
         	c.fillColor = '#0f0';
+		c.applyMatrix = false;
         	chars.addChild(c);
         	randomize_char(c);
         }
@@ -58,10 +59,10 @@
             c.position.y = 0;
             c.position.x = rand(0, view.size.width);
             // vary the size
-            //var scale = 1 * Math.random();
-            //if (scale > 0.25) {
-                //c.scale(scale);
-            //}
+            var scale = 1 * Math.random();
+            if (scale > 0.35) {
+                c.scale(scale);
+            }
             // hack, using word wrap for shadow length
             // c.wordWrapWidth = rand(maxShadowLength/3, maxShadowLength);
             return;
