--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -58,11 +58,8 @@
             c.position.y = 0;
             c.position.x = rand(0, view.size.width);
             // vary the size
-            var scale = 1 * Math.random();
-            if (scale > 0.35) {
-	    	c.applyMatrix = false;
-                c.scale(scale);
-            }
+	    var textSize = rand(50, 90);
+	    c.fontSize = textSize + 'px';
             // hack, using word wrap for shadow length
             // c.wordWrapWidth = rand(maxShadowLength/3, maxShadowLength);
             return;
