--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -73,7 +73,7 @@
         function onFrame(event) {
         	for (var i = 0; i < maxChars; i++) {
         		var c = chars.children[i];
-        		c.position.y += c.bounds.height;
+        		c.position.y += c.bounds.width;
 			c.opacity += 0.025;
         		if (c.bounds.bottom > view.size.height) {
         		    randomize_char(c);
