--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -66,7 +66,7 @@
 	    c.fontSize = rand(minCharSize, maxCharSize) + 'px';
             // hack, using word wrap for shadow length
             // c.wordWrapWidth = rand(maxShadowLength/3, maxShadowLength);
-	    c.opacity = 0.15;
+	    //c.opacity = 0.15;
             return;
         };
         
