--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -73,6 +73,9 @@
         function onFrame(event) {
         	for (var i = 0; i < maxChars; i++) {
         		var c = chars.children[i];
+			var s = c;
+			s.opacity -= 0.25;
+			shadows.addChild(s);
         		c.position.y += c.bounds.height - 4;
 			c.opacity += 0.025;
         		if (c.bounds.bottom > view.size.height) {
@@ -81,6 +84,14 @@
         		// change char's character
         		c.content = characters[rand(0, characters.length)];
         	}
+		//var children = shadows.children
+		for (var i = 0; i < shadows.length; i++) {
+			var s = shadows.children[i];
+			s.opacity -= 0.25;
+			if (s.opacity < 0.15){
+				shadows.removeChild(s);
+			}
+		}
         }
         
 </script>
