--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -84,8 +84,8 @@
         		// change char's character
         		c.content = characters[rand(0, characters.length)];
         	}
-		//var children = shadows.children
-		for (var i = 0; i < shadows.length; i++) {
+		var children = shadows.children
+		for (var i = 0; i < children.length; i++) {
 			var s = shadows.children[i];
 			s.opacity -= 0.25;
 			if (s.opacity < 0.15){
