--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -84,8 +84,8 @@
         		c.content = characters[rand(0, characters.length)];
         	}
 		var children = shadows.children;
-		console.log('Children.length: ' = children.length);
-		console.log('Char.children.length: ' = char.children.length);
+		console.log('Children.length: ' + children.length);
+		console.log('Char.children.length: ' + char.children.length);
 		for (var i = 0; i < children.length; i++) {
 			var s = shadows.children[i];
 			s.opacity -= 0.35;
