--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -83,7 +83,7 @@
         		// change char's character
         		c.content = characters[rand(0, characters.length)];
         	}
-		console.log('shadows.children.length: ' + children.length);
+		console.log('shadows.children.length: ' + shadows.children.length);
 		console.log('chars.children.length: ' + chars.children.length);
 		for (var i = 0; i < shadows.children.length; i++) {
 			var s = shadows.children[i];
