--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -87,9 +87,11 @@
         	}
 		shadows.opacity -= 0.25;
 		var items = project.getItems({
-		    opacity: 0
+			opacity: 0
 		});
-		items.remove();
+		for (var i = 0; i < items.length; i++) {
+			items[i].remove();
+		}
 		console.log('shadows.children.length: ' + shadows.children.length);
 		console.log('chars.children.length: ' + chars.children.length);
         }
