--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -74,8 +74,8 @@
 			
 			var s = c.clone();
 			s.fillColor = '#0f0';
-			s.opacity -= 0.25;
-			shadows.addChild(s);
+			s.opacity -= 0.025;
+			//shadows.addChild(s);
 			
         		c.position.y += c.bounds.height - 4;
 			c.opacity += 0.025;
@@ -85,14 +85,18 @@
         		// change char's character
         		c.content = characters[rand(0, characters.length)];
         	}
-		shadows.opacity -= 0.25;
+		//shadows.opacity -= 0.025;
 		var items = project.getItems({
+			s.fillColor = '#0f0',
 			opacity: 0
 		});
 		for (var i = 0; i < items.length; i++) {
-			items[i].remove();
+			items[i].opacity -= 0.025;
+			if(items[i].opacity <= 0){
+				items[i].remove();
+			}
 		}
-		console.log('shadows.children.length: ' + shadows.children.length);
+		//console.log('shadows.children.length: ' + shadows.children.length);
 		console.log('chars.children.length: ' + chars.children.length);
         }
         
