--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -84,8 +84,7 @@
         		c.content = characters[rand(0, characters.length)];
         	}
 		var items = project.getItems({
-			fillColor: '#0f0',
-			opacity: 0
+			fillColor: '#0f0'
 		});
 		for (var i = 0; i < items.length; i++) {
 			items[i].opacity -= 0.025;
