--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -71,9 +71,9 @@
         	for (var i = 0; i < maxChars; i++) {
         		var c = chars.children[i];
 			
-			var s = c.clone();
-			s.fillColor = '#0f0';
-			s.opacity -= 0.025;
+			//var s = c.clone();
+			//s.fillColor = '#0f0';
+			//s.opacity -= 0.25;
 			
         		c.position.y += c.bounds.height - 4;
 			c.opacity += 0.025;
@@ -87,7 +87,7 @@
 			fillColor: '#0f0'
 		});
 		for (var i = 0; i < items.length; i++) {
-			items[i].opacity -= 0.025;
+			items[i].opacity -= 0.25;
 			if(items[i].opacity <= 0){
 				items[i].remove();
 			}
