--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -53,6 +53,7 @@
         	c.fontFamily = 'matrix-code';
         	c.fontSize = maxCharSize + 'px';
         	c.fillColor = '#cfc';
+		c.opacity = 1;
         	chars.addChild(c);
         	randomize_char(c);
         }
@@ -71,7 +72,7 @@
 			
 			var s = c.clone();
 			s.fillColor = '#0f0';
-			s.opacity -= 0.25;
+			s.opacity = 0.75;
 			
         		c.position.y += c.bounds.height - 4;
         		if (c.bounds.bottom > view.size.height) {
@@ -81,9 +82,9 @@
         		c.content = characters[rand(0, characters.length)];
         	}
 		var items = paper.project.getItems({
-		    opacity: function(value) {
-			return value < 1;
-		    }
+			opacity: function(value) {
+				return value < 1;
+			}
 		});
 		for (var i = 0; i < items.length; i++) {
 			items[i].opacity -= 0.25;
