--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -70,7 +70,7 @@
         	for (var i = 0; i < maxChars; i++) {
         		var c = chars.children[i];
 			
-			var s = c.clone();
+			//var s = c.clone();
 			//s.fillColor = '#0f0';
 			//s.opacity = 0.75;
 			
