--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -67,13 +67,11 @@
         };
         
         function onFrame(event) {
+		var shadows = chars.clone();
+		shadows.fillColor = '#0f0';
+		shadows.opacity = 0.5;
         	for (var i = 0; i < maxChars; i++) {
-        		var c = chars.children[i];
-			
-			//var s = c.clone();
-			//s.fillColor = '#0f0';
-			//s.opacity = 0.75;
-			
+        		var c = chars.children[i];			
         		c.position.y += c.bounds.height - 4;
         		if (c.bounds.bottom > view.size.height) {
         		    randomize_char(c);
@@ -81,7 +79,6 @@
         		// change char's character
         		c.content = characters[rand(0, characters.length)];
         	}
-		/*
 		var items = paper.project.getItems({
 			opacity: function(value) {
 				return value < 1;
@@ -93,7 +90,6 @@
 				items[i].remove();
 			}
 		}
-		*/
         }
         
 </script>
