--- a/paperjs-matrix.html
+++ b/paperjs-matrix.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/p5-matrix.css">
+<link rel="stylesheet" href="css/html-matrix.css">
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.22/paper-full.min.js"></script>
 <script type="text/paperscript" canvas="paper-matrix">
 
