--- a/pixi-matrix.html
+++ b/pixi-matrix.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/p5-matrix.css">
+    <link rel="stylesheet" href="css/html-matrix.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/pixi.js/3.0.6/pixi.min.js"></script>
 
 </head>
